--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,28 +1,19 @@
----
-- hosts: webservers
-  gather_facts: no
-  remote_user: root
-  become: yes
-  tasks:
-    - name: Install docker and some dependencies
-      apt:
-        name: python3-pip, docker.io
-        state: present
-
-    - name: Start docker service
-      service:
-        name: docker
-        state: started
-
-    - name: Install docker python module
-      pip:
-        name: docker
-
-    - name: Create Application container
-      docker_container:
-        name: docker-pipeline
-        image: anujsharma1990/springbootdocker:latest
-        state: started
-        recreate: yes
-        exposed_ports:
-          - "8080:8080"
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: student-info-app
+spec:
+  replicas: 1  # Set the desired number of replicas for your application
+  selector:
+    matchLabels:
+      app: student-info-app
+  template:
+    metadata:
+      labels:
+        app: student-info-app
+    spec:
+      containers:
+      - name: student-info-container
+        image: your-docker-repo/student-info:latest  # Replace this with the actual image name and version
+        ports:
+        - containerPort: 8081
